--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,11 @@ spring:
     url: jdbc:mysql://localhost:3306/exam
     username: root
     password: lldj123414
+    hikari:
+      auto-commit: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
